--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+html {
+  font-size: 15px;
+}
+@media (max-width: 500px) {
+  html {
+    font-size: 12px;
+  }
+}
+body {
+  background: -webkit-gradient(
+      linear,
+      left top,
+      right bottom,
+      from(#af5e94),
+      to(#5949f2)
+    )
+    fixed;
+}
+
 a {
   color: black;
   text-decoration: none;
@@ -5,7 +24,12 @@ a {
 a:hover {
   text-decoration: none;
 }
-.card-body {
+.card {
+  background-color: #fff;
+}
+.card-body,
+ul {
+  background-color: rgb(246, 243, 255);
   min-height: 0px;
 }
 .form-control {
@@ -20,6 +44,7 @@ a:hover {
   color: rgb(101, 101, 255);
 }
 .list-group-item {
+  background-color: inherit;
   border: none;
 }
 .under-list-item {
@@ -35,4 +60,30 @@ a:hover {
 
 .line-throught {
   text-decoration: line-through;
+}
+
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+
+@media (max-width: 992px) {
+  .container,
+  .row {
+    padding: 0;
+    margin: 0 auto;
+  }
+  .btn-outline-danger {
+    font-size: 0.9rem;
+  }
+  footer {
+    position: relative;
+    margin-top: 400px;
+  }
+}
+@media (max-width: 400px) {
+  #dellAll {
+    font-size: 0.7rem;
+  }
 }
